--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,42 @@
 @import "screen/index.css";
 
 @import "reset.css";
+
+@media (min-width: 160px) and (max-width: 500px) {
+  .main_header {
+    font-size: 65px;
+  }
+
+  .main_header h1 {
+    margin-top: 20px;
+  }
+  .main_nav {
+    row-gap: 20px;
+    margin-left: 10px;
+    height: 300px;
+  }
+
+  .main_nav i {
+    font-size: 50px;
+  }
+
+  .nav_icons {
+    height: 150px;
+  }
+
+  .nav_icons a {
+    font-size: 10px;
+    padding-top: 34px;
+  }
+}
 body {
   font-family: "Zen Maru Gothic", sans-serif;
   font-size: 20px;
   width: 100%;
   height: 400vh;
+}
+
+h2 {
+  margin-top: 200px;
+  font-size: 40px;
 }
