--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,15 @@
     box-shadow: 5px 5px rgb(104, 103, 103), 10px 10px 15px rgb(31, 31, 31);
   }
 
+  .nav_icons:hover {
+    box-shadow: inset 5px 5px 2px rgb(78, 78, 78), 2px 2px 1px rgb(83, 83, 83),
+      10px 10px 10px rgb(31, 31, 31);
+  }
+  .nav_icons:active {
+    box-shadow: inset 8px 8px 2px rgb(78, 78, 78), 2px 2px 1px rgb(83, 83, 83),
+      10px 10px 10px rgb(31, 31, 31);
+  }
+
   .nav_icons a {
     font-size: 10px;
     padding-top: 34px;
