--- a/css/style.css
+++ b/css/style.css
@@ -20,38 +20,38 @@
     row-gap: 20px;
     margin-left: 10px;
     height: 300px;
+    margin-top: 120px;
   }
 
   .main_nav i {
-    font-size: 50px;
+    font-size: 40px;
   }
 
-  .nav_icons {
-    height: 150px;
-    box-shadow: 5px 5px rgb(104, 103, 103), 10px 10px 15px rgb(31, 31, 31);
+  .main_nav a {
+    height: 120px;
+    box-shadow: 5px 5px rgb(255, 255, 255), 5px 5px 2px rgb(31, 31, 31);
   }
 
-  .nav_icons:hover {
+  .main_nav a:hover {
     box-shadow: inset 3px 3px 1px rgb(78, 78, 78), 2px 2px 1px rgb(83, 83, 83),
       10px 10px 10px rgb(31, 31, 31);
   }
-  .nav_icons:active {
+  .main_nav a:active {
     box-shadow: inset 5px 5px 1px rgb(78, 78, 78), 2px 2px 1px rgb(83, 83, 83),
       10px 10px 10px rgb(31, 31, 31);
   }
 
-  .nav_icons a {
+  .nav-back span {
     font-size: 10px;
-    padding-top: 34px;
   }
 }
 body {
-  font-family: "Zen Maru Gothic", sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
   font-size: 20px;
   width: 100%;
   height: 400vh;
 }
 
 h2 {
-  font-size: 40px;
+  font-size: 30px;
 }
