--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap");
 
 /*screen*/
 @import "screen/index.css";
@@ -49,7 +49,7 @@
   }
 }
 body {
-  font-family: "Noto Sans JP", sans-serif;
+  font-family: "M PLUS Rounded 1c", sans-serif;
   font-size: 20px;
   width: 100%;
   height: 400vh;
