--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
   }
 }
 body {
-  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-family: "M PLUS 1p", sans-serif;
   font-size: 20px;
   width: 100%;
   height: 400vh;
