--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,13 @@
     column-gap: 20px;
     margin-left: 60px;
     height: 300px;
-    margin-top: 120px;
+    margin-top: 140px;
     margin-right: 60px;
   }
 
   .main_nav i {
-    font-size: 23px;
+    font-size: 30px;
+    margin-bottom: 0;
   }
 
   .main_nav a {
@@ -38,8 +39,8 @@
   }
 
   .nav-back span {
-    font-size: 6px;
-    margin-bottom: 20px;
+    font-size: 10px;
+    margin-top: 6px;
   }
 
   .main_nav a:nth-child(1) {
