--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Kaisei+Opti:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kaisei+Opti:wght@400;500;700&family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap");
 /*screen*/
 @import "screen/index.css";
 @import "screen/index2.css";
@@ -105,7 +105,7 @@
   }
 }
 body {
-  font-family: "Kaisei Opti", serif;
+  font-family: "M PLUS Rounded 1c", sans-serif;
   font-size: 20px;
   width: 100%;
   height: 400vh;
