--- a/css/screen/link.css
+++ b/css/screen/link.css
@@ -13,3 +13,27 @@
   border-radius: 0 0 10px 10px;
   background-color: rgb(212, 88, 88);
 }
+
+.all-link {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(228, 212, 212);
+  width: 100%;
+  height: 500vh;
+}
+
+.school-link {
+  margin-top: 200px;
+  width: 50%;
+}
+
+.link-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  width: 80%;
+  height: 300px;
+}
