--- a/css/screen/index.css
+++ b/css/screen/index.css
@@ -1,5 +1,5 @@
-/**body {
-  background-color: white;
+body {
+  background-color: rgb(223, 229, 255);
 }
 
 .main_header {
@@ -16,18 +16,26 @@
   box-shadow: 0px 0px 5px rgb(1, 16, 36);
   border-radius: 0 0 10px 10px;
   background-color: #0865db;
+  z-index: 3;
+}
+
+.nav-all {
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
 
 .main_nav {
   display: grid;
   justify-content: space-around;
   align-items: center;
+  width: 80%;
   height: 800px;
-  margin-left: 60px;
-  margin-top: 200px;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  row-gap: 80px;
+  margin-top: 250px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  row-gap: 100px;
+  column-gap: 70px;
 }
 
 .main_nav i {
@@ -40,11 +48,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
-  height: 300px;
-  border-radius: 20%;
+  width: 100%;
+  height: 250px;
   transition: 0.1s ease-in;
-  box-shadow: 10px 10px rgb(255, 255, 255), 10px 10px 5px rgb(31, 31, 31);
+  transform: rotateZ(50deg);
 }
 
 .nav-back {
@@ -52,22 +59,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  transform: rotateZ(-50deg);
 }
 
 .nav-back span {
   color: white;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 700;
-}
-
-.main_nav a:hover {
-  box-shadow: inset 10px 10px 2px rgb(78, 78, 78), 2px 2px 1px rgb(83, 83, 83),
-    10px 10px 10px rgb(31, 31, 31);
-}
-
-.main_nav a:active {
-  box-shadow: inset 20px 20px 2px rgb(78, 78, 78), 2px 2px 1px rgb(83, 83, 83),
-    10px 10px 10px rgb(31, 31, 31);
 }
 
 .nav_icons {
@@ -76,6 +74,8 @@
 
 .main_nav a:nth-child(1) {
   background-color: rgb(212, 88, 88);
+  box-shadow: -30px -30px rgb(255, 255, 255), -30px -30px 5px rgb(212, 88, 88),
+    30px 30px rgb(255, 255, 255), 30px 30px 5px rgb(212, 88, 88);
 }
 
 .main_nav a:nth-child(1):hover {
@@ -84,6 +84,8 @@
 
 .main_nav a:nth-child(2) {
   background-color: cornflowerblue;
+  box-shadow: -20px -20px rgb(255, 255, 255), -20px -20px 5px cornflowerblue,
+    20px 20px rgb(255, 255, 255), 20px 20px 5px cornflowerblue;
 }
 
 .main_nav a:nth-child(2):hover {
@@ -92,6 +94,8 @@
 
 .main_nav a:nth-child(3) {
   background-color: darkgreen;
+  box-shadow: -30px -30px rgb(255, 255, 255), -30px -30px 5px darkgreen,
+    30px 30px rgb(255, 255, 255), 30px 30px 5px darkgreen;
 }
 
 .main_nav a:nth-child(3):hover {
@@ -100,6 +104,8 @@
 
 .main_nav a:nth-child(4) {
   background-color: rgb(138, 96, 216);
+  box-shadow: -20px -20px rgb(255, 255, 255), -20px -20px 5px rgb(138, 96, 216),
+    20px 20px rgb(255, 255, 255), 20px 20px 5px rgb(138, 96, 216);
 }
 
 .main_nav a:nth-child(4):hover {
@@ -108,6 +114,8 @@
 
 .main_nav a:nth-child(5) {
   background-color: orange;
+  box-shadow: -30px -30px rgb(255, 255, 255), -30px -30px 5px orange,
+    30px 30px rgb(255, 255, 255), 30px 30px 5px orange;
 }
 
 .main_nav a:nth-child(5):hover {
@@ -116,6 +124,8 @@
 
 .main_nav a:nth-child(6) {
   background-color: silver;
+  box-shadow: -20px -20px rgb(255, 255, 255), -20px -20px 5px silver,
+    20px 20px rgb(255, 255, 255), 20px 20px 5px silver;
 }
 .main_nav a:nth-child(6):hover {
   background-color: rgb(104, 104, 104);
@@ -123,6 +133,8 @@
 
 .main_nav a:nth-child(7) {
   background-color: teal;
+  box-shadow: -30px -30px rgb(255, 255, 255), -30px -30px 5px teal,
+    30px 30px rgb(255, 255, 255), 30px 30px 5px teal;
 }
 
 .main_nav a:nth-child(7):hover {
@@ -131,8 +143,32 @@
 
 .main_nav a:nth-child(8) {
   background-color: rgb(207, 207, 25);
+  box-shadow: -20px -20px rgb(255, 255, 255), -20px -20px 5px rgb(207, 207, 25),
+    20px 20px rgb(255, 255, 255), 20px 20px 5px rgb(207, 207, 25);
 }
 
 .main_nav a:nth-child(8):hover {
   background-color: rgb(112, 112, 14);
+}
+
+.main_nav a:nth-child(9) {
+  background-color: rgb(255, 131, 172);
+  box-shadow: -30px -30px rgb(255, 255, 255), -30px -30px 5px rgb(255, 131, 172),
+    30px 30px rgb(255, 255, 255), 30px 30px 5px rgb(255, 131, 172);
+}
+
+.main_nav a:nth-child(9):hover {
+  background-color: rgb(153, 79, 103);
+}
+
+.main_nav a:hover {
+  box-shadow: 2px 2px 1px rgb(255, 255, 255), 10px 10px 2px rgb(77, 77, 77);
+}
+
+.main_nav a:active {
+  box-shadow: 0px 0px 1px rgb(83, 83, 83), 5px 5px 4px rgb(31, 31, 31);
+}
+
+.dark_mode i {
+  color: rgb(31, 15, 20);
 }
