--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,16 @@
   body {
     height: 100vh;
   }
-  .main_header {
+  .main_header,
+  .main_header-2 {
     font-size: 55px;
   }
 
   .main_header h1 {
     margin-top: 20px;
   }
-  .main_nav {
+  .main_nav,
+  .main_nav-2 {
     row-gap: 20px;
     column-gap: 20px;
     margin-left: 60px;
@@ -28,70 +30,82 @@
     margin-right: 60px;
   }
 
-  .main_nav i {
+  .main_nav i,
+  .main_nav-2 i {
     font-size: 30px;
     margin-bottom: 0;
   }
 
-  .main_nav a {
+  .main_nav a,
+  .main_nav-2 a {
     height: 90px;
     width: 80px;
   }
 
-  .nav-back span {
+  .nav-back span,
+  .nav-back_2 span {
     font-size: 10px;
     margin-top: 6px;
   }
 
-  .main_nav a:nth-child(1) {
+  .main_nav a:nth-child(1),
+  .main_nav-2 a:nth-child(1) {
     background-color: rgb(212, 88, 88);
     box-shadow: -8px -8px rgb(255, 255, 255), -8px -8px 2px rgb(212, 88, 88),
       8px 8px rgb(255, 255, 255), 8px 8px 2px rgb(212, 88, 88);
   }
 
-  .main_nav a:nth-child(2) {
+  .main_nav a:nth-child(2),
+  .main_nav-2 a:nth-child(2) {
     background-color: cornflowerblue;
     box-shadow: -5px -5px rgb(255, 255, 255), -5px -5px 2px cornflowerblue,
       5px 5px rgb(255, 255, 255), 5px 5px 2px cornflowerblue;
   }
 
-  .main_nav a:nth-child(3) {
+  .main_nav a:nth-child(3),
+  .main_nav-2 a:nth-child(3) {
     background-color: darkgreen;
     box-shadow: -8px -8px rgb(255, 255, 255), -8px -8px 2px darkgreen,
       8px 8px rgb(255, 255, 255), 8px 8px 2px darkgreen;
   }
 
-  .main_nav a:nth-child(4) {
+  .main_nav a:nth-child(4),
+  .main_nav-2 a:nth-child(4) {
     background-color: rgb(138, 96, 216);
     box-shadow: -5px -5px rgb(255, 255, 255), -5px -5px 2px rgb(138, 96, 216),
       5px 5px rgb(255, 255, 255), 5px 5px 2px rgb(138, 96, 216);
   }
 
-  .main_nav a:nth-child(5) {
+  .main_nav a:nth-child(5),
+  .main_nav-2 a:nth-child(5) {
     background-color: orange;
     box-shadow: -8px -8px rgb(255, 255, 255), -8px -8px 2px orange,
       8px 8px rgb(255, 255, 255), 8px 8px 2px orange;
   }
 
-  .main_nav a:nth-child(6) {
+  .main_nav a:nth-child(6),
+  .main_nav-2 a:nth-child(6) {
     background-color: silver;
     box-shadow: -5px -5px rgb(255, 255, 255), -5px -5px 2px silver,
       5px 5px rgb(255, 255, 255), 5px 5px 2px silver;
   }
 
-  .main_nav a:nth-child(7) {
+  .main_nav a:nth-child(7),
+  .main_nav-2 a:nth-child(7) {
     background-color: teal;
     box-shadow: -8px -8px rgb(255, 255, 255), -8px -8px 2px teal,
       8px 8px rgb(255, 255, 255), 8px 8px 2px teal;
   }
 
-  .main_nav a:nth-child(8) {
+  .main_nav a:nth-child(8),
+  .main_nav-2 a:nth-child(8) {
     background-color: rgb(207, 207, 25);
     box-shadow: -5px -5px rgb(255, 255, 255), -5px -5px 2px rgb(207, 207, 25),
       5px 5px rgb(255, 255, 255), 5px 5px 2px rgb(207, 207, 25);
   }
 
-  .main_nav a:nth-child(9) {
+  .main_nav a:nth-child(9),
+  .main_nav-2 a:nth-child(9) {
     background-color: rgb(255, 131, 172);
     box-shadow: -8px -8px rgb(255, 255, 255), -8px -8px 2px rgb(255, 131, 172),
       8px 8px rgb(255, 255, 255), 8px 8px 2px rgb(255, 131, 172);
